# zed-ide-flutter-extension

./: .gitignore  AGENTS.md  Cargo.toml  README.md  extension.toml
debug_adapter_schemas/: Dart.json  Flutter.json
docs/: ATTRIBUTION.md  CONFIGURATION.md  DEVICE_MANAGEMENT.md  DEVTOOLS_GUIDE.md  FLUTTER_TASKS.md  FVM_GUIDE.md  HOT_RELOAD.md  KEYBOARD_SHORTCUTS.md  LIMITATIONS.md  MIGRATION_GUIDE.md  README.md  RELEASE_NOTES.md  SETUP.md  SLASH_COMMANDS.md  TROUBLESHOOTING.md
languages/dart/: runnables.scm  tasks.json
src/: debug_adapter.rs  device.rs  fvm.rs  language_server.rs  lib.rs  slash_commands.rs
