[package]
name = "zed_flutter"
version = "1.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["debug-adapter", "language-server", "slash-commands"]
debug-adapter = []
language-server = []
slash-commands = []

[dependencies]
zed_extension_api = "0.7.0"
